projects/vb6parse/snapshots/tests/library/environment/error_dollar/error_dollar_debug_print.snap
---
source: projects/vb6parse/tests/library/environment/error_dollar.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Debug
                - kind: PeriodOperator
                  text: "."
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Error occurred: \""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: Error$
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children: []
                                - kind: RightParenthesis
                                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
